# jackbot

./: .gitignore  .pylintrc  README.rst  config_example.json  pyproject.toml  requirements.txt  setup.py
jackbox/: __init__.py  bracketeering.py  brk.py  civicdoodle.py  drawful.py  drawful2.py  everyday.py  overdrawn.py  quiplash2.py  quiplash3.py  range.py  teeko.py  teeko2.py  worldchampions.py
test/: everyday.json  worldchampions.json
